test/types/type_variables/deitz/test_query_field6.good
test_query_field6.chpl:11: error: unresolved call 'foo(1.0, 2, 3)'
test_query_field6.chpl:1: note: this candidate did not match: foo(x: ?t ...?k)
test_query_field6.chpl:1: note: because an argument was incompatible
